--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "ts-node": "^8.6.2",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.7.5"
+  },
+  "dependencies": {
+    "axios": "^0.21.1"
   }
 }
