--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "typescript.tsdk": "node_modules/typescript/lib"
+  "typescript.tsdk": "node_modules/typescript/lib",
+  "[typescript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode" // フォーマッタをprettierに指定
+},
+"editor.formatOnSave": true, // ファイル保存時にPrettierでフォーマット
+"editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true // ファイル保存時にESLintでフォーマット
+}
 }
