--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "homepage": "https://github.com/orangina1018/learn_typescript#readme",
   "devDependencies": {
+    "eslint-config-prettier": "^8.3.0",
+    "prettier": "^2.3.0",
     "ts-node": "^8.5.4",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.7.5"
